--- a/client/.env.production
+++ b/client/.env.production
@@ -1,2 +1,2 @@
-VUE_APP_ROOT_API = https://dry-badlands-98330.herokuapp.com/v1
-VUE_APP_SOCKET_PATH  = https://dry-badlands-98330.herokuapp.com
+VUE_APP_ROOT_API = https://ilan-tic-tac-toe.herokuapp.com/v1
+VUE_APP_SOCKET_PATH  = https://ilan-tic-tac-toe.herokuapp.com
