--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,9 @@
     "dev": "vue-cli-service serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "surge": "surge dist --domain https://ilan-tic-tac.surge.sh",
+    "deploy": "npm run build && npm run surge"
   },
   "dependencies": {
     "axios": "^0.18.0",
